# canvas

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
canvas/: application.cpp  application.h  canvas.cpp  canvas.h  color.cpp  color.h  input.cpp  input.h  noise.cpp  noise.h  pixelbuffer.h  renderer.cpp  renderer.h  vec2.h
canvas/shaders/: sprite.vert
common/: application.cpp  application.h  canvas.cpp  canvas.h  color.cpp  color.h  input.cpp  pixelbuffer.h  renderer.cpp  renderer.h
demo/: asciiart.cpp  automata.cpp  bezier.cpp  blur.cpp  cave.cpp  cube.cpp  demo.cpp  diffusion-limited-aggregation.cpp  dithering-floyd-steinberg.cpp  flowfield.cpp  font.cpp  fredkinreplicator.cpp  gameoflife.cpp  hitomezashi.cpp  line2line.cpp  maze.cpp  mazegenerator.cpp  mazesolver.cpp  mazesolverbulk.sh  nca.cpp  noise.cpp  noisedemo.cpp  oscillation.cpp  painter.cpp  particles.cpp  pbfviewer.cpp  start.cpp  voronoi.cpp  wireworld.cpp
demo/assets/: applefont.pbf  base01.pbf  base01.tga  gameoflife01.tga  letter_f.pbf  milkmaid.pbf  pencils.pbf
pixelbuffer/: color.h  pixelbuffer.h  vec2.h
tools/: img2pbf  img2pbf.py  pbf2img  pbf2img.py  pbfbulk.sh
